# Vote-App

./: .gitignore  pyproject.toml  setup.cfg
backend/: pyproject.toml  pytest.ini  setup.cfg
backend/src/: conftest.py
backend/src/core/: settings.py  urls.py
backend/src/core/config/: test_settings.py
backend/src/users/: admin.py  authentication.py  selectors.py  serializers.py  urls.py  views.py
backend/src/users/tests/selectors/: test_get_token_by_key_selector.py
backend/src/users/tests/serializers/: test_user_serializer.py
backend/src/users/tests/serializers/unit tests/: test_user_login_serializer.py
backend/src/vote/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/src/vote/migrations/: 0001_initial.py  0002_alter_voteform_description.py  0003_alter_votefields_description_and_more.py  0004_alter_votefields_form.py  0005_rename_type_voteform_statistics_type_and_more.py  0006_voteform_closing_greater_than_created.py  0007_alter_voteform_options.py
backend/src/vote/tests/: conftest.py
frontend/: package-lock.json  package.json
frontend/src/: create_form.js  get_username.js  globals.js  normalize.css  script.js  services.js  style.css
frontend/src/js_pages/: create_form.js
frontend/src/js_pages/user/: login.js
frontend/src/js_pages/vote/: create_form.js  form_vote.js  my_forms_list.js
frontend/src/pages/: base_template.html  login.html
frontend/src/pages/user/: login.html
frontend/src/pages/vote/: create_form.html  my_forms_list.html  voteFormTemplate.ejs
(+21 files in other folders)
